Tue Nov 29 14:22:39 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * LICENSE.rtf:
        * install/CUTS_CoSMIC.wxs:

          Moved the RichText version of the license to the root directory.

        * docs/License.rtf:
        * install/BMW.wxs:
        * install/BMW_installers.mpc:
        * install/BMW_installers.mwc:

          Removed these files.

Tue Nov 29 03:58:34 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * .:

          Added default.features to the ignore list.

        * bin/generate_iccm_project.py:
        * bin/iCCM:
        * bin/iCCM/TemplateFile.py:
        * bin/iCCM/__init__.py:
        * bin/iCCM/templates:
        * bin/iCCM/templates/cpp:
        * bin/iCCM/templates/cpp/CCM.mwc.tmpl:
        * bin/iCCM/templates/cpp/ccm:
        * bin/iCCM/templates/cpp/ccm/CCM.mpc.tmpl:
        * bin/iCCM/templates/cpp/ccm/CCM_Servant.cpp.tmpl:
        * bin/iCCM/templates/cpp/ccm/CCM_Servant.h.tmpl:
        * bin/iCCM/templates/cpp/ccm/CCM_Servant.inl.tmpl:
        * bin/iCCM/templates/cpp/ccm/CCM_Servant_T.cpp.tmpl:
        * bin/iCCM/templates/cpp/ccm/CCM_Servant_T.h.tmpl:
        * bin/iCCM/templates/cpp/ccm/CCM_Servant_T.inl.tmpl:
        * bin/iCCM/templates/cpp/ccm/CCM_export.h.tmpl:
        * bin/iCCM/templates/cpp/handlers:
        * bin/iCCM/templates/cpp/handlers/CCM_Container.cpp.tmpl:
        * bin/iCCM/templates/cpp/handlers/CCM_Container.h.tmpl:
        * bin/iCCM/templates/cpp/handlers/CCM_Container.inl.tmpl:
        * bin/iCCM/templates/cpp/handlers/CCM_Container_Strategy.cpp.tmpl:
        * bin/iCCM/templates/cpp/handlers/CCM_Container_Strategy.h.tmpl:
        * bin/iCCM/templates/cpp/handlers/CCM_Container_Strategy.inl.tmpl:
        * bin/iCCM/templates/cpp/handlers/CCM_Deployment_Handlers.mpc.tmpl:
        * bin/iCCM/templates/cpp/handlers/CCM_Deployment_Handlers_export.h.tmpl:
        * bin/iCCM/templates/cpp/handlers/CCM_Instance_Handler.cpp.tmpl: