@@ -1,3 +1,14 @@
+Tue Nov 29 14:55:40 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>
+
+        * bin/generate_iccm_project.py:
+
+          Bug fix where the generator failed if it was executed in any
+          directory other than $CUTS_ROOT/bin
+
+        * docs/iCCM:
+
+          Documentation for using iCCM.
+
 Tue Nov 29 14:22:39 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>
 
         * LICENSE.rtf:
